<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeGive</string>
    <string name="login">Login</string>
    <string name="email" tools:ignore="DuplicateDefinition">Email</string>
    <string name="email2" tools:ignore="DuplicateDefinition">Email</string>
    <string name="password">Password</string>
    <string name="login2" tools:ignore="DuplicateDefinition">Login</string>
    <string name="login3" tools:ignore="DuplicateDefinition">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="new_to_wegive">New to WeGive?</string>
    <string name="join_us">Join Us</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="settings_one">Settings One</string>
    <string name="by_downloading_or_using_the_app_these_terms_will_automatically_apply_to_you_you_should_make_sure_therefore_that_you_read_them_carefully_before_using_the_app_you_re_not_allowed_to_copy_or_modify_the_app_any_part_of_the_app_or_our_trademarks_in_any_way_you_re_not_allowed_to_attempt_to_extract_the_source_code_of_the_app_and_you_also_shouldn_t_try_to_translate_the_app_into_other_languages_or_make_derivative_versions_the_app_itself_and_all_the_trade_marks_copyright_database_rights_and_other_intellectual_property_rights_related_to_it_still_belong_to_matan_kazarov_amos_tal_adam_ginton_n_n_matan_kazarov_amos_tal_adam_ginton_is_committed_to_ensuring_that_the_app_is_as_useful_and_efficient_as_possible_for_that_reason_we_reserve_the_right_to_make_changes_to_the_app_or_to_charge_for_its_services_at_any_time_and_for_any_reason_we_will_never_charge_you_for_the_app_or_its_services_without_making_it_very_clear_to_you_exactly_what_you_re_paying_for_n_n_the_wegive_app_stores_and_processes_personal_data_that_you_have_provided_to_us_in_order_to_provide_my_service_it_s_your_responsibility_to_keep_your_phone_and_access_to_the_app_secure_we_therefore_recommend_that_you_do_not_jailbreak_or_root_your_phone_which_is_the_process_of_removing_software_restrictions_and_limitations_imposed_by_the_official_operating_system_of_your_device_it_could_make_your_phone_vulnerable_to_malware_viruses_malicious_programs_compromise_your_phone_s_security_features_and_it_could_mean_that_the_wegive_app_won_t_work_properly_or_at_all_n_you_should_be_aware_that_there_are_certain_things_that_matan_kazarov_amos_tal_adam_ginton_will_not_take_responsibility_for_certain_functions_of_the_app_will_require_the_app_to_have_an_active_internet_connection_the_connection_can_be_wi_fi_or_provided_by_your_mobile_network_provider_but_matan_kazarov_amos_tal_adam_ginton_cannot_take_responsibility_for_the_app_not_working_at_full_functionality_if_you_don_t_have_access_to_wi_fi_and_you_don_t_have_any_of_your_data_allowance_left_n_if_you_re_using_the_app_outside_of_an_area_with_wi_fi_you_should_remember_that_your_terms_of_the_agreement_with_your_mobile_network_provider_will_still_apply_as_a_result_you_may_be_charged_by_your_mobile_provider_for_the_cost_of_data_for_the_duration_of_the_connection_while_accessing_the_app_or_other_third_party_charges_in_using_the_app_you_re_accepting_responsibility_for_any_such_charges_including_roaming_data_charges_if_you_use_the_app_outside_of_your_home_territory_i_e_region_or_country_without_turning_off_data_roaming_if_you_are_not_the_bill_payer_for_the_device_on_which_you_re_using_the_app_please_be_aware_that_we_assume_that_you_have_received_permission_from_the_bill_payer_for_using_the_app_n_along_the_same_lines_matan_kazarov_amos_tal_adam_ginton_cannot_always_take_responsibility_for_the_way_you_use_the_app_i_e_you_need_to_make_sure_that_your_device_stays_charged_if_it_runs_out_of_battery_and_you_can_t_turn_it_on_to_avail_the_service_matan_kazarov_amos_tal_adam_ginton_cannot_accept_responsibility_n_with_respect_to_matan_kazarov_amos_tal_adam_ginton_s_responsibility_for_your_use_of_the_app_when_you_re_using_the_app_it_s_important_to_bear_in_mind_that_although_we_endeavour_to_ensure_that_it_is_updated_and_correct_at_all_times_we_do_rely_on_third_parties_to_provide_information_to_us_so_that_we_can_make_it_available_to_you_matan_kazarov_amos_tal_adam_ginton_accepts_no_liability_for_any_loss_direct_or_indirect_you_experience_as_a_result_of_relying_wholly_on_this_functionality_of_the_app_n_at_some_point_we_may_wish_to_update_the_app_the_app_is_currently_available_on_android_ios_the_requirements_for_both_systems_and_for_any_additional_systems_we_decide_to_extend_the_availability_of_the_app_to_may_change_and_you_ll_need_to_download_the_updates_if_you_want_to_keep_using_the_app_matan_kazarov_amos_tal_adam_ginton_does_not_promise_that_it_will_always_update_the_app_so_that_it_is_relevant_to_you_and_or_works_with_the_android_ios_version_that_you_have_installed_on_your_device_however_you_promise_to_always_accept_updates_to_the_application_when_offered_to_you_we_may_also_wish_to_stop_providing_the_app_and_may_terminate_use_of_it_at_any_time_without_giving_notice_of_termination_to_you_unless_we_tell_you_otherwise_upon_any_termination_a_the_rights_and_licenses_granted_to_you_in_these_terms_will_end_b_you_must_stop_using_the_app_and_if_needed_delete_it_from_your_device_n_n_changes_to_this_terms_and_conditions_n_n_i_may_update_our_terms_and_conditions_from_time_to_time_thus_you_are_advised_to_review_this_page_periodically_for_any_changes_i_will_notify_you_of_any_changes_by_posting_the_new_terms_and_conditions_on_this_page_n_these_terms_and_conditions_are_effective_as_of_2020_07_29_n_n_contact_us_n_n_if_you_have_any_questions_or_suggestions_about_my_terms_and_conditions_do_not_hesitate_to_contact_me"><![CDATA[By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Matan Kazarov, Amos Tal, Adam Ginton.\n \n Matan Kazarov, Amos Tal, Adam Ginton is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n \n The WeGive app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the WeGive app won’t work properly or at all. \n You should be aware that there are certain things that Matan Kazarov, Amos Tal, Adam Ginton will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Matan Kazarov, Amos Tal, Adam Ginton cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left. \n If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app. \n Along the same lines, Matan Kazarov, Amos Tal, Adam Ginton cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Matan Kazarov, Amos Tal, Adam Ginton cannot accept responsibility. \n With respect to Matan Kazarov, Amos Tal, Adam Ginton’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Matan Kazarov, Amos Tal, Adam Ginton accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app. \n At some point, we may wish to update the app. The app is currently available on Android & iOS – the requirements for both systems(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Matan Kazarov, Amos Tal, Adam Ginton does not promise that it will always update the app so that it is relevant to you and/or works with the Android & iOS version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device. \n\n Changes to This Terms and Conditions \n\n I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. \n These terms and conditions are effective as of 2020-07-29 \n\n Contact Us \n\n If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me]]></string>
    <string name="matankzr">Matankzr</string>
    <string name="matan">Matan</string>
    <string name="kazarov">Kazarov</string>
    <string name="matankzr_gmail_com">matankzr@gmail.com</string>
    <string name="_123456789">123456789</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_0_00">0.00</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="pay">PAY</string>
</resources>